--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
   </head>
   <body class="bg-stone-950">
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="/src/App.tsx"></script>
   </body>
 </html>
